<resources>
    <string name="app_name">inventure</string>
    <string name="user_name">UserName</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password_register_page">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Con. Password</string>
    <string name="reenter_your_password">ReEnter Your Password</string>
    <string name="register_register_page">Register</string>

    //Set Password

    <string name="send_password">Send My Password</string>

    //Set Verification Code

    <string name="send_verification_code">Send Verification Code</string>
    <string name="account">Account</string>
    <string name="password_login_page">Password</string>
    <string name="enter_account">Enter Account</string>
    <string name="enter_your_pass">Enter Password</string>
    <string name="login_login_page">Sign In</string>
    <string name="register_login_page">Sign Up</string>
    <string name="forgot_login_page">Forget Password</string>
    <string name="login_by_phone_num_login_page">Login With Phone Number</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign in</string>
    <string name="hint">And explore 28 192+ offers</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
